# IntentFlowAI

./: .gitignore  DIAGNOSTICS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_README.md  QUICK_START.md  README.md  README_UPGRADES.md  TESTING_RESULTS.md  TEST_RESULTS.md  UPGRADE_COMPLETE.txt  UPGRADE_STATUS.md  UPGRADE_SUMMARY.md  VALIDATION_REPORT.md  dashboard.py  pyproject.toml  requirements.txt
config/: costs_india.yaml
config/experiments/: v_universe_extended.yaml  v_universe_full.yaml  v_universe_sanity.yaml
dashboard/: app.py
data/static/: nifty200_membership.csv  sector_map.csv
experiments/v0/: lgb.pkl  metrics.json  preds.csv  top_signals.csv
intentflow_ai/: __init__.py
notebooks/: README.md
scripts/: fetch_prices.py  metrics_report.py  phase2_diagnostics.py  quick_validation_test.py  run_backtest.py  run_comprehensive_metrics.py  run_diagnostics.py  run_feature_audit.py  run_ic_diagnostics.py  run_ingestion.py  run_pipeline.py  run_production_pipeline.py  run_sanity.py  run_scoring.py  run_training.py  run_upgraded_validation.py  run_walk_forward_validation.py  smoke_test.py  test_fundamental_features.py  test_nse_fundamental_features.py  test_production_features.py  test_upgrades.py  validate_existing_experiment.py  validate_strategy.py
tools/: build_nifty100_parquet.py  convert_bhavcopy_to_parquet.py  convert_nse_csv_to_parquet.py  fetch_nse_api.py  fetch_nse_bhavcopy.py  generate_synthetic_price_panel.py  generate_universe_clean.py  make_price_panel_from_bhavcopy.py  quick_convert.py  validate_price_panel.py
(+135 files in other folders)
